# synapse-framework

./: .clangd  CMakeLists.txt
synapse/: func.cpp
synapse/include/: func.h  ndarray.h  tensor.h
synapse/tensor/: ndarray.cpp  tensor.cpp
tests/: func.cpp  ndarray.cpp
